# vctracker

./: .gitignore  .gitmodules  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  MIGRATION_NOTES.md  README.md  TESTING_IMPLEMENTATION.md  package-lock.json  package.json
.github/workflows/: ci.yml  test-builds.yml
docs/: architecture.md  hardware.md  ros2-integration.md  setup.md  testing.md  usb-protocol.md
examples/: main.cpp  system_test.cpp  test_gimbal.cpp  test_gps.cpp  test_gps_ubx.cpp  test_leds.cpp  test_ros.cpp  test_ros_minimal.cpp  test_serial.cpp  test_simple.cpp
include/: AntennaTracker.h  GPSModule.h  GeoCalculations.h  ROSParser.h  StatusLED.h  USBProtocol.h  USBTargetParser.h  pico_uart_transport.h
scripts/: build.sh  flash.sh  init-submodules.sh  test_serial_usb.py
src/: AntennaTracker.cpp  GPSModule.cpp  GeoCalculations.cpp  ROSParser.cpp  StatusLED.cpp  USBTargetParser.cpp  pico_uart_transport.c
